# ds-glassdoor

./: .gitignore  Data Gathering.ipynb  README.md  data.py  data_preprocess.py  data_processed.csv  glassdoor_scraper.py  model.ipynb  parse_info.py  pyproject.toml
FlaskAPI/: app.py  request.py  test_input.csv
FlaskAPI/models/: rf_mae_f1_est30.pkl
data/: data.py  data_analysis.ipynb  data_preprocess.py  data_processed.csv  glassdoor_jobs.csv  parse_info.py
