[tool.poetry]
name = "ds-glassdoor"
version = "0.1.0"
description = ""
authors = ["Yinan Zhou <yinan.a.zhou@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ds_glassdoor"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.1"
pandas = "^2.0.2"
notebook = "^6.5.4"
requests = "^2.31.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
wordcloud = "^1.9.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
